--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "licence": "proprietary",
   "devDependencies": {
-    "@symfony/webpack-encore": "^0.22.4",
+    "@symfony/webpack-encore": "^0.27.0",
     "autoprefixer": "^9.4.4",
-    "bootstrap": "^4.2.1",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0"
